@@ -1,6 +1,7 @@
 package ru.practicum.shareit.user.service;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import ru.practicum.shareit.exceptions.ConflictException;
@@ -9,18 +10,16 @@ import ru.practicum.shareit.exceptions.ValidationException;
 import ru.practicum.shareit.user.dto.UserDto;
 import ru.practicum.shareit.user.dto.UserMapper;
 import ru.practicum.shareit.user.model.User;
-import ru.practicum.shareit.user.storage.UserRepository;
+import ru.practicum.shareit.user.storage.UserJpaRepository;
 
-import java.util.Comparator;
 import java.util.List;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
-    private final UserRepository repo;
+    private final UserJpaRepository users;
 
     private static final Pattern SIMPLE_EMAIL =
             Pattern.compile("^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$");
@@ -29,15 +28,19 @@ public class UserServiceImpl implements UserService {
     public UserDto create(UserDto dto) {
         validateForCreate(dto);
 
-        String cleanedEmail = cleanEmail(dto.getEmail());
-        dto.setEmail(cleanedEmail);
-        dto.setName(dto.getName().trim());
+        String email = cleanEmail(dto.getEmail());
+        String name  = dto.getName().trim();
 
-        if (repo.existsByEmail(cleanedEmail, null)) {
-            throw new ConflictException("Email уже используется: " + cleanedEmail);
+        if (users.existsByEmailCaseInsensitive(email, null)) {
+            throw new ConflictException("Email уже используется: " + email);
         }
 
-        User saved = repo.save(UserMapper.fromDto(dto));
+        User toSave = User.builder()
+                .name(name)
+                .email(email)
+                .build();
+
+        User saved = users.save(toSave);
         return UserMapper.toDto(saved);
     }
 
@@ -47,7 +50,7 @@ public class UserServiceImpl implements UserService {
             throw new ValidationException("Тело запроса не должно быть пустым");
         }
 
-        User existing = repo.findById(id)
+        User existing = users.findById(id)
                 .orElseThrow(() -> new NotFoundException("Пользователь не найден: " + id));
 
         if (patch.getName() != null) {
@@ -63,33 +66,34 @@ public class UserServiceImpl implements UserService {
             if (!SIMPLE_EMAIL.matcher(email).matches()) {
                 throw new ValidationException("Некорректный email");
             }
-            if (repo.existsByEmail(email, id)) {
+            if (users.existsByEmailCaseInsensitive(email, id)) {
                 throw new ConflictException("Email уже используется: " + email);
             }
             existing.setEmail(email);
         }
 
-        return UserMapper.toDto(repo.update(existing));
+        User saved = users.save(existing);
+        return UserMapper.toDto(saved);
     }
 
     @Override
     public UserDto getById(Long id) {
-        return repo.findById(id)
+        return users.findById(id)
                 .map(UserMapper::toDto)
                 .orElseThrow(() -> new NotFoundException("Пользователь не найден: " + id));
     }
 
     @Override
     public List<UserDto> getAll() {
-        return repo.findAll().stream()
-                .sorted(Comparator.comparing(User::getId))
+        Sort sort = Sort.by(Sort.Direction.ASC, "id");
+        return users.findAll(sort).stream()
                 .map(UserMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void delete(Long id) {
-        repo.deleteById(id);
+        users.deleteById(id);
     }
 
     private void validateForCreate(UserDto dto) {
